tests/ui/parser/issues/issue-103425.stderr
error: expected `;`, found `5.0`
  --> $DIR/issue-103425.rs:2:6
   |
LL |     3
   |      ^
LL |
LL |     5.0
   |     --- unexpected token
   |
help: add `;` here
   |
LL |     3;
   |      +

error: expected `;`, found `3_i8`
  --> $DIR/issue-103425.rs:8:10
   |
LL |     2_u32
   |          ^
LL |
LL |     3_i8
   |     ---- unexpected token
   |
help: add `;` here
   |
LL |     2_u32;
   |          +

error: expected `;`, found `5.0`
  --> $DIR/issue-103425.rs:10:9
   |
LL |     3_i8
   |         ^
LL |
LL |     5.0
   |     --- unexpected token
   |
help: add `;` here
   |
LL |     3_i8;
   |         +

error: aborting due to 3 previous errors

